--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,6 @@
 {
   "accentColor": "#752dcd",
   "cssTheme": "Blue Topaz",
-  "baseFontSize": 13
+  "baseFontSize": 13,
+  "translucency": false
 }
