--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,6 +2,7 @@
   "alwaysUpdateLinks": true,
   "attachmentFolderPath": "模板库",
   "pdfExportSettings": {
+    "includeName": true,
     "pageSize": "A4",
     "landscape": false,
     "margin": "0",
